--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -27,10 +27,10 @@ jobs:
           packages: write
         steps:
             # Check out the repository code to the runner
-            - uses: actions/checkout@v1
+            - uses: actions/checkout@v2
             
             # Cache dependencies for faster subsequent builds
-            - name: Cache 
+            - name: Cache
               uses: actions/cache@v2
               with:
                   path: |
@@ -47,8 +47,11 @@ jobs:
                 node-version: ${{ matrix.node-version }}
                 cache: "npm"
             
+            # Log the files for debugging
+            - run: ls -la
+            
             # Install project dependencies
-            - run: npm ci
+            - run: npm ci || npm install  # Fallback to npm install if ci fails
             
             # Build the project
             - run: npm run build --if-present
