updated to yarn

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -27,37 +27,34 @@ jobs:
           packages: write
         steps:
             # Check out the repository code to the runner
-            - uses: actions/checkout@v2
+            - uses: actions/checkout@v1
             
             # Cache dependencies for faster subsequent builds
-            - name: Cache
+            - name: Cache 
               uses: actions/cache@v2
               with:
                   path: |
-                    ~/.npm
+                    ~/.cache/yarn
                     ${{ github.workspace }}/.next/cache
-                  key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.[jt]s', '**/*.[jt]sx') }}
+                  key: ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-${{ hashFiles('**/*.[jt]s', '**/*.[jt]sx') }}
                   restore-keys: |
-                    ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
+                    ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-
             
-            # Set up the Node.js environment for the runner
+            # Set up Node.js environment
             - name: Use Node.js ${{ matrix.node-version }}
               uses: actions/setup-node@v3
               with:
                 node-version: ${{ matrix.node-version }}
-                cache: "npm"
+                cache: "yarn"
             
-            # Log the files for debugging
-            - run: ls -la
-            
-            # Install project dependencies
-            - run: npm install  # Fallback to npm install if ci fails
+            # Install project dependencies using Yarn
+            - run: yarn install --frozen-lockfile
             
             # Build the project
-            - run: npm run build --if-present
+            - run: yarn build:production
             
             # Run tests if they are available
-            - run: npm run test --if-present
+            - run: yarn test --if-present
            
             # Log into the specified Docker registry
             - name: Log in to the Container registry
